--- a/test.html
+++ b/test.html
@@ -17,12 +17,12 @@
 
 	<!-- Import maps polyfill -->
 	<!-- Remove this when import maps will be widely supported -->
-	<script async="" src="./three.js webgl - post processing - pixelation_files/es-module-shims.js"></script>
+	<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
 	<script type="importmap">
 		{
 			"imports": {
-				"three": "../build/three.module.js",
+				"three": "./three.module.js",
 				"three/addons/": "./jsm/"
 			}
 		}
