--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <head><title>Florence's Gamer Page</title></head>
 <body>
 <h1>Hello World</h1>
   <p>Click here for my first <a href="./examples/webgl_postprocessing_pixel.html">game</a>.</p>
