--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head><title>Florence's Gamer Page</title></head>
+  <style>
+body {
+  background-image: url('./resources/bg.png');
+}
+</style>
 <body>
-<h1>Hello World</h1>
+  <center><img src="./resources/title.png">
+    <hr></center>
+<h1>Hello Gamer!</h1>
   <p>Click here for my first <a href="./examples/webgl_postprocessing_pixel.html">game</a>.</p>
 </body>
 </html>
