--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head><title>Florence's Gamer Page</title></head>
+      <meta charset="utf-8">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Rubik+Gemstones">
   <style>
 body {
   background-image: url('./resources/bg.png');
+        font-family: 'Rubik+Gemstones', serif;
+        font-size: 48px;
+  text-shadow: 4px 4px 4px #aaa;
 }
 </style>
 <body>
