--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@ body {
         font-family: 'Rubik+Gemstones', serif;
         font-size: 48px;
   text-shadow: 4px 4px 4px #aaa;
+  color: lightgrey;
+}
+h1 {
+  color: white;
+
 }
 </style>
 <body>
